<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HayCancha!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fields">Buscar turno</string>
    <string name="matchs">Buscar partido</string>
    <string name="players">Buscar jugador</string>
    <string name="reservations">Mis reservas</string>
    <string name="favorites">Canchas favoritas</string>
    <string name="invitations">Mis invitaciones</string>
    <string name="perfil">Perfil</string>
    <string name="calificar">Calificar</string>
    <string name="resultado">Turnos encontrados</string>
    <string name="resultado_player">Jugadores encontrados</string>
    <string name="day">Dia</string>
    <string name="hour_to">Hasta</string>
    <string name="hour_from">Desde</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Repetir contraseña</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="login">Ingresar</string>
    <string name="singup">Registrarse</string>
    <string name="done">Listo!</string>
    <string name="next">Siguiente</string>
    <string name="login_title">Ingresar</string>
    <string name="create_account_title">Registrarse</string>
    <string name="stadium_detail">Detalle Complejo</string>
    <string name="title_activity_maps">Map</string>
    <string name="acept_text">"Aceptar"</string>
    <string name="cancel_text">"Cancelar"</string>
    <string name="error_message">"Hubo un problema, intentelo nuevamente"</string>
    <string name="no_reservation_confirmed">"No tienes reservas confirmadas por el momneto."</string>
    <string name="no_found_player">"No hemos encontrado jugadores disponibles en esa posición"</string>
    <string name="error_hora_message">"La hora desde no puede ser mayor a la hora hasta"</string>
    <string name="success_save_turn_message">"Excelente, esperemos a que tu canchero responda"</string>
    <string name="success_invite_player_message">"Esperemos a que tu invitado responda"</string>
    <string name="success_response_player_message">"Disfrutá de tu partido"</string>
    <string name="save_turn">"Reservar turno"</string>
    <string name="success_create_account_message">"La cuenta fue creada con éxito"</string>
    <string name="success_update_user_info">"Los datos han sido modificados correctamente"</string>
    <string name="success_update_user_image">"La imagen ha sido modificada correctamente"</string>
    <string name="error_password_message">"Los campos de contraseña deben coincidir"</string>
    <string name="error_form_incomplete_message">"Debe completar todos los datos del formulario"</string>
    <string name="error_user_password_wrong">"El usuario y/o contraseña son incorrectos"</string>
    <string name="comment">"Comentario"</string>
    <string name="txt_desc_disponible">"Si estas disponible, otros usuarios podrán encontrarte en "Buscar jugador" para invitarte a diferentes turnos"</string>
    <string name="txt_desc_position">"Indicá tu posición favorita"</string>
    <string name="txt_close_sesion">"Cerrar sesión"</string>
    <string name="update">"Actualizar"</string>
    <string name="search_turn">"Buscar turnos"</string>


</resources>
