<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_fondo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:padding="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/hay_cancha_verde_sin_sombra" />


        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <sempait.haycancha.widgets.HelveticaNeueLightEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:singleLine="true"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                android:textCursorDrawable="@null" />


            <sempait.haycancha.widgets.HelveticaNeueLightEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:hint="@string/last_name"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/green" />

            <sempait.haycancha.widgets.HelveticaNeueLightEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:singleLine="true"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                android:textCursorDrawable="@null" />


            <Button
                android:id="@+id/btn_next"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_border"
                android:text="@string/next"
                android:textColor="@color/green"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
