<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:minWidth="800dp"
    android:minHeight="250dp"
    android:orientation="vertical"
    android:padding="5dp">

    <sempait.haycancha.widgets.HelveticaNeueLightTextView
        android:id="@+id/title_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/app_name"
        android:textColor="@color/green_dark"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <sempait.haycancha.widgets.HelveticaNeueLightTextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/comment"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/lyt_stars_rating"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/img_star_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="1dp"
                android:src="@drawable/star_off" />

            <ImageView
                android:id="@+id/img_star_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="1dp"
                android:src="@drawable/star_off" />

            <ImageView
                android:id="@+id/img_star_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="1dp"
                android:src="@drawable/star_off" />

            <ImageView
                android:id="@+id/img_star_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="1dp"
                android:src="@drawable/star_off" />

            <ImageView
                android:id="@+id/img_star_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="1dp"
                android:src="@drawable/star_off" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/txt_close_reason"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <sempait.haycancha.widgets.HelveticaNeueLightTextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/done"
            android:textColor="@color/white" />

        <sempait.haycancha.widgets.HelveticaNeueLightTextView
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/acept_text"
            android:textColor="@color/white"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>