<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:scaleType="centerCrop"-->
    <!--android:src="@drawable/fondo_login_1"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/profile_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:background="@color/green"
            android:orientation="horizontal"
            android:paddingLeft="20dp">


            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/remera_perfil" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <sempait.haycancha.widgets.HelveticaNeueLightTextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:text="adsadsa"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <sempait.haycancha.widgets.HelveticaNeueLightTextView
                    android:id="@+id/user_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="adsadsa"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />


                <sempait.haycancha.widgets.HelveticaNeueLightTextView
                    android:id="@+id/user_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:text="Delantero"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/content_filter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/buscar_turno_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-1dp"
                android:layout_marginTop="-1dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:scaleType="centerInside"

                    android:layout_marginRight="10dp"
                    android:src="@drawable/buscar_turno" />

                <sempait.haycancha.widgets.HelveticaNeueLightTextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical|left"
                    android:text="@string/fields"
                    android:textColor="@color/green_dark" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginLeft="20dp"
                android:background="@color/light_gray_darker_transparent" />

            <LinearLayout
                android:id="@+id/buscar_jugador_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-1dp"
                android:layout_marginTop="-1dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:scaleType="centerInside"

                    android:layout_marginRight="10dp"
                    android:src="@drawable/buscar_jugador" />

                <sempait.haycancha.widgets.HelveticaNeueLightTextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical|left"
                    android:text="@string/players"
                    android:textColor="@color/green_dark" />

            </LinearLayout>

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.6dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:background="@color/light_gray_darker_transparent" />-->


            <LinearLayout
                android:id="@+id/buscar_partido_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-1dp"
                android:layout_marginTop="-1dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/buscara_partidos" />

                <sempait.haycancha.widgets.HelveticaNeueLightTextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical|left"
                    android:text="@string/matchs"
                    android:textColor="@color/green" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginLeft="20dp"
                android:background="@color/light_gray_darker_transparent" />


            <LinearLayout
                android:id="@+id/mis_reservas_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-1dp"
                android:layout_marginTop="-1dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:scaleType="centerInside"

                    android:layout_marginRight="10dp"
                    android:src="@drawable/mis_reservas" />

                <sempait.haycancha.widgets.HelveticaNeueLightTextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical|left"
                    android:text="@string/reservations"
                    android:textColor="@color/green_dark" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginLeft="20dp"
                android:background="@color/light_gray_darker_transparent" />


            <LinearLayout
                android:id="@+id/invitation_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-1dp"
                android:layout_marginTop="-1dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:scaleType="centerInside"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/mis_invitaciones" />


                <sempait.haycancha.widgets.HelveticaNeueLightTextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"

                    android:gravity="center_vertical|left"
                    android:text="@string/invitations"
                    android:textColor="@color/green_dark" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>